Fix the gap between the lower images

--- a/index.css
+++ b/index.css
@@ -114,6 +114,8 @@ html {
   color: rgb(54, 52, 52);
 }
 .three-images{
+  display: flex;
+  gap: 15px;
   position: absolute;
   bottom: 10px;
   right: 18px;
